--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"packages/*"
 	],
 	"author": "D4RKAR117",
-	"license": "LGPL-3.0-or-later",
+	"license": "GPL-3.0-or-later",
 	"volta": {
 		"node": "18.17.1"
 	},
