--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -9,7 +9,7 @@
 		"scss"
 	],
 	"author": "d4rkar117",
-	"license": "LGPL-3.0-or-later",
+	"license": "GPL-3.0-or-later",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/d4rkar117/ultimate-components.git",
