--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -6,6 +6,7 @@
 	"types": "dist/index.d.ts",
 	"module": "dist/index.js",
 	"type": "module",
+	"license": "GPL-3.0-or-later",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/d4rkar117/ultimate-components.git",
