feat(helpers): added custom plugin to load imported styles from mitosis components
- Added plugin to load imported style references from mitosis components supporting scss

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,7 @@
 		"strict": true,
 		"allowJs": false,
 		"noUncheckedIndexedAccess": true,
-		"moduleResolution": "Bundler",
+		"moduleResolution": "Node",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"isolatedModules": true,
