--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -6,6 +6,9 @@
 	"types": "dist/index.d.ts",
 	"module": "dist/index.js",
 	"type": "module",
+	"files": [
+		"dist"
+	],
 	"license": "GPL-3.0-or-later",
 	"repository": {
 		"type": "git",
@@ -15,7 +18,7 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
-			"require": "./dist/index.js",
+			"require": "./dist/index.cjs",
 			"types": "./dist/index.d.ts"
 		}
 	},
@@ -28,11 +31,8 @@
 		"lint": "concurrently -n code,types -c green,blue \"pnpm lint:code\" \"pnpm lint:types\""
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.15",
+		"@builder.io/mitosis": "^0.0.119",
 		"concurrently": "^8.2.1",
-		"cssnano": "^6.0.1",
-		"postcss": "^8.4.29",
-		"postcss-preset-env": "^9.1.3",
 		"sass": "^1.66.1",
 		"tsup": "^7.2.0"
 	}
